# argparse-dantic

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
argparse_dantic/: __init__.py
argparse_dantic/_argparse/: actions.py  container.py  help.py  parser.py
argparse_dantic/dantic_types/: __init__.py  _construct.py  _fields.py  _import_utils.py  basic_config.py  fields.py  fields.pyi  groups.py  main.py
argparse_dantic/parsers/: __init__.py  boolean.py  command.py  container.py  enum.py  literal.py  mapping.py  model.py  standard.py
argparse_dantic/utils/: arguments.py  pydantic.py  types.py
examples/: advanced.py  commands.py  global_option.py  groups.py  model.py  simple.py
tests/: test_basic_config.py  test_command.py  test_globa_data.py  test_global_data.py  test_groups.py  test_model.py  test_types.py
