[project]
name = "argparse-dantic"
description = "Typed Argument Parsing with Pydantic enhanced version"
authors = [{ name = "Erlone Alpha", email = "zhongerlong@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
version = "0.2.4"
dependencies = [
    "pydantic == 2.12.5",
    "rich >= 14.3.3"
]

classifiers = [
    "Development Status :: 4 - Beta",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Intended Audience :: Developers',
    'Framework :: Pydantic',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

keywords = ["python", "pydantic", "argparse", "typed", "validation"]

[project.urls]
Changelog = "https://github.com/Erlonealpha/argparse-dantic/blob/master/CHANGELOG.md"
Repository = "https://github.com/Erlonealpha/argparse-dantic"
Issues = "https://github.com/Erlonealpha/argparse-dantic/issues"

[tool.ruff.lint]
ignore = [
    "F403", "F405", "E741"
]

[tool.uv]
cache-dir = "F:\\.local\\uvcache"

[dependency-groups]
dev = ["pytest"]